style: purple background and white color

--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,8 @@ body {
   font-family: "Roboto", sans-serif;
   top: 0;
   bottom: 0;
-}
-
-@media (max-width: 1023px) {
-  body {
-    background: #3f3fbf;
-  }
+  color: white;
+  background: #3f3fbf;
 }
 
 body::-webkit-scrollbar {
