--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,16 @@
+:root {
+  --black: #171219;
+  --white: #ffffff;
+  --blue: #225560;
+  --light-blue: #5db7de;
+  --yellow: #fbaa29;
+  --light-yellow: #f9c80e;
+  --red: #df2935;
+  --light-red: #fc8c44;
+  --green: #49a078;
+  --light-green: #91f5ad;
+}
+
 html,
 body {
   padding: 0;
@@ -9,6 +22,12 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+code {
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 * {
