--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--black);
+  color: var(--white);
 }
 
 a {
