feat: New landing page w/ app router

--- a/src/design-system/showcase.module.css
+++ b/src/design-system/showcase.module.css
@@ -54,7 +54,7 @@
 .sliderControl {
   display: flex;
   justify-content: space-around;
-  padding: 2rem;
+  /* padding: 2rem; */
   margin-top: 2rem;
 }
 
