--- a/src/design-system/global.css
+++ b/src/design-system/global.css
@@ -13,3 +13,12 @@
     --smoke-white: 251 249 255;
   }
 }
+
+@layer components {
+  *:focus,
+  *:focus-visible {
+    border-radius: 2px;
+    outline-offset: 2px;
+    outline: 2px solid rgb(var(--pale-blue) / 1);
+  }
+}
