style: Background in safari uses incorrect 3d transform

--- a/src/design-system/shadow.module.css
+++ b/src/design-system/shadow.module.css
@@ -1,9 +1,10 @@
 .shadow {
   position: relative;
-  transform-style: preserve-3d;
+  /* transform-style: preserve-3d; */
 }
 
 .shadow::before {
+  z-index: -1;
   content: "";
   position: absolute;
   inset: 0px;
