style: Top page border with linear gradient

--- a/src/design-system/global.css
+++ b/src/design-system/global.css
@@ -15,6 +15,24 @@
 }
 
 @layer components {
+  body::before {
+    content: "";
+    height: 4px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    background-image: linear-gradient(
+      to right,
+      rgb(var(--pale-red) / 1),
+      rgb(var(--pale-orange) / 1),
+      rgb(var(--pale-yellow) / 1),
+      rgb(var(--pale-green) / 1),
+      rgb(var(--pale-blue) / 1)
+    );
+  }
+
   button:focus,
   *:focus-visible {
     border-radius: 2px;
